Support Java 9+
Drops support for Java 7